Correct mistake in MP display

--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -69,7 +69,7 @@
                         {% if answer %}
                             Dernière rép.
                             <a href="{{ answer.get_absolute_url }}" class="hide-for-small">
-                                {{ date=answer.pubdate|naturaltime }}
+                                {{ answer.pubdate|naturaltime }}
                             </a>
                             </br>
                             par
