--- a/templates/article/admin/index.html
+++ b/templates/article/admin/index.html
@@ -23,8 +23,8 @@
 
 {% block sidebar_filter %}
     <li><a href="{% url "zds.member.views.articles" %}">Tous</a></li>
-    <li><a href="{% url "zds.member.views.articles" %}?type=public">Publié</a></li>
-    <li><a href="{% url "zds.member.views.articles" %}?type=draft">Brouillon</a><li>
+    <li><a href="{% url "zds.member.views.articles" %}?type=public">Publiés</a></li>
+    <li><a href="{% url "zds.member.views.articles" %}?type=draft">Brouillons</a><li>
 {% endblock %}
 
 
