--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -8,10 +8,12 @@
 
 
 html,
+body,
 button,
 input,
 select,
 textarea {
+    font-family: "Segoe UI", "Roboto", "Trebuchet MS", Helvetica, "Helvetica Neue", Arial, sans-serif;
     color: #222;
 }
 
@@ -22,7 +24,6 @@ html {
     overflow-x: hidden;
 }
 body {
-    font-family: "Segoe UI", "Roboto", "Trebuchet MS", Helvetica, "Helvetica Neue", Arial, sans-serif;
     background: #f4f6f6;
     font-size: 14px;
     font-size: 1.4rem;
