--- a/assets/css/scss/_wide.scss
+++ b/assets/css/scss/_wide.scss
@@ -39,6 +39,12 @@
         z-index: 1;
         position: relative;
         @include box-shadow(0 0 3px rgba(0, 0, 0, .3));
+
+        header {
+            @include background-image(
+                linear-gradient(left, transparent 20%, rgba(255, 255, 255, .07) 40%, rgba(255, 255, 255, .07) 60%, transparent 80%)
+            );
+        }
     }
 
 
