fix display pages

--- a/templates/pages/association.html
+++ b/templates/pages/association.html
@@ -8,8 +8,8 @@
     <li class="current"><a href="#">L'association Zeste de Savoir</a></li>
 {% endblock %}
 
-{% block headline %}
-    Pages
+{% block head-title %}
+    Association
 {% endblock %}
 
 {% block content %}
