--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -4,7 +4,7 @@
     À propos
 {% endblock %}
 
-{% block headline %}
+{% block head-title %}
     À propos
 {% endblock %}
 
@@ -20,17 +20,16 @@
     </div>
     <div class="large-4 columns">
         <h3>Copyrights</h3>
-        <p>Zeste de Savoir est un logiciel libre distribué sous licence <a href="http://www.gnu.org/licenses/gpl-3.0.html>GPL v3</a>, et provient en parti de <a href="http://progdupeu.pl">Progdupeupl</a>.</p>
+        <p>Zeste de Savoir est un logiciel libre distribué sous licence <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPL v3</a>, et provient en parti de <a href="http://progdupeu.pl">Progdupeupl</a>.</p>
         <p><a href="#">Le logo de Zeste de Savoir</a> est de MaxRoyo et est disponible sous licence [TODO]</p>
         <p>Les tutoriels et les articles sont la propriété de leurs auteurs.</p>
-        <p>Certaines icônes sont basées sur le pack d'icônes <a href="http://glyphicons.com/">Glyphicons</a> mis à disposition sous licence CC-BY 3.0 unported.</p>
     </div>
     <div class="large-4 columns">
         <h3>Système</h3>
-        <p>Le serveur de Zeste de Savoir tourne avec ces techologies :</p>
+        <p>Le serveur de Zeste de Savoir tourne avec ces technologies :</p>
         <p><strong>Site</strong></p>
         <ul>
-            <li><a href="http://www.python.org/">CPython 2.7</a></li>
+            <li><a href="http://www.python.org/">Python 2.7</a></li>
             <li><a href="https://www.djangoproject.com/">Django 1.6</a></li>
         </ul>
         <p><strong>HTTP(S) + WSGI</strong></p>
