--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -8,7 +8,7 @@
     <li class="current"><a href="#">Index</a></li>
 {% endblock %}
 
-{% block headline %}
+{% block head-title %}
     Pages
 {% endblock %}
 
