--- a/templates/pages/eula.html
+++ b/templates/pages/eula.html
@@ -8,7 +8,7 @@
     <li class="current"><a href="#">Conditions Générales d'Utilisation</a></li>
 {% endblock %}
 
-{% block headline %}
+{% block head-title %}
     Pages
 {% endblock %}
 
