update topic page and add moderations

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -400,6 +400,10 @@ h1.forum, h2.forum, h3.forum, h4.forum, h5.forum, h1.member, h2.member, h3.membe
 	border-bottom: 1px solid #999;
 }
 
+.username {
+	font-size: 0.9rem;
+}
+
 .avatar-forum {
 	border-radius: 50%;
 }
