--- a/templates/tutorial/base_read.html
+++ b/templates/tutorial/base_read.html
@@ -8,6 +8,7 @@
     <ul class="taglist">
         {% block head-tag %}{% endblock %}
     </ul>
+    <p class="subtitle">{% block headline-sub %}{% endblock %}</p>
     
     <div class="authors content-wrapper">
         <span class="authors-label">Auteurs :  </span>
