--- a/templates/article/view.html
+++ b/templates/article/view.html
@@ -40,7 +40,7 @@
     <form action="{% url "zds.article.views.modify" %}" method="post">
 
         {% if user in authors.all or perms.article.change_article %}
-        <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Opérations">
+        <div>
             <h3>Actions</h3>
             <ul>
                 {% if article.sha_draft = version %}
@@ -60,8 +60,8 @@
         {% endif %}
 
         {% if perms.article.change_article %}
-        <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administration">
-            <h3>Admin<span class="wide">istration</span></h3>
+        <div>
+            <h3>Administration</h3>
             <ul>
                 {% if not article.sha_validation = None %}
                 <li>
